Fix pagination links overlap when width < 500px

--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -93,6 +93,7 @@ h6, .h6 {
   font-size: 18px;
   border: 1px solid #ddd;
   border-radius: 6px;
+  line-height: 50px;
 }
 
 .skip {
